# cc-autoresume

./: Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
launchd/: com.cuong.cc-autoresume.plist  local.cuong.cc-autoresume.plist
skills/auto-resume/: SKILL.md
src/: account.rs  arm.rs  cli.rs  config.rs  detect.rs  lib.rs  main.rs  notify.rs  parse_reset.rs  pending.rs  resume.rs  scheduler.rs  sessions.rs  stats.rs  transcript.rs  watch.rs
src/server/: api.rs  assets.rs  auth.rs  mod.rs  sse.rs
src/web/: index.html
tests/: cli.rs
