[package]
name = "cc-autoresume"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "cc-autoresume"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
chrono-tz = "0.9"
regex = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3"
