[package]
name = "cc-autoresume"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "cc-autoresume"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
chrono-tz = "0.9"
regex = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
axum = "0.7"
async-stream = "0.3"
futures-core = "0.3"
qrcode = "0.14"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
